Fixed mobile layout issue.  Done with styling for now, moving on to functionality

--- a/app/mhac-airport/src/reset.css
+++ b/app/mhac-airport/src/reset.css
@@ -1,9 +1,12 @@
 /* Box sizing rules */
-/* *,
+
 *::before,
 *::after {
     box-sizing: border-box;
-} */
+}
+
+/* Hide scroll bar */
+::-webkit-scrollbar {display: none;}
 
 /* Remove default margin */
 body,
